[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Art/Levels/shop.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Levels/Shop.gd" type="Script" id=2]
[ext_resource path="res://Assets/Misc/font.tres" type="Theme" id=3]
[ext_resource path="res://Assets/Music/coin.mp3" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 33.3333, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 88, 32 )

[node name="Shop" type="Node2D"]
script = ExtResource( 2 )

[node name="Mat_1_Shop" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="Mat_1_Shop"]
position = Vector2( -24, -24 )
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mat_1_Shop"]
position = Vector2( -20, -20 )
scale = Vector2( 3, 3 )
shape = SubResource( 1 )

[node name="Button" type="Button" parent="Mat_1_Shop"]
margin_left = -8.0
margin_top = -112.0
margin_right = 48.0
margin_bottom = -88.0
theme = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticBody2D" type="StaticBody2D" parent="Mat_1_Shop"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mat_1_Shop/StaticBody2D"]
position = Vector2( -24, -16 )
shape = SubResource( 2 )

[node name="Mat_2" type="Area2D" parent="."]
position = Vector2( 224, 0 )

[node name="Sprite" type="Sprite" parent="Mat_2"]
position = Vector2( -24, -24 )
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
vframes = 2
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mat_2"]
position = Vector2( -24, -23.9999 )
scale = Vector2( 3, 3 )
shape = SubResource( 1 )

[node name="Button_2" type="Button" parent="Mat_2"]
margin_left = -16.0
margin_top = -112.0
margin_right = 48.0
margin_bottom = -80.0
theme = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticBody2D" type="StaticBody2D" parent="Mat_2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mat_2/StaticBody2D"]
position = Vector2( -24, -16 )
shape = SubResource( 2 )

[node name="coin" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="Mat_1_Shop" to="." method="_on_Mat_1_Shop_body_entered"]
[connection signal="body_exited" from="Mat_1_Shop" to="." method="_on_Mat_1_Shop_body_exited"]
[connection signal="pressed" from="Mat_1_Shop/Button" to="." method="_on_Button_pressed"]
[connection signal="body_entered" from="Mat_2" to="." method="_on_Mat_2_body_entered"]
[connection signal="body_exited" from="Mat_2" to="." method="_on_Mat_2_body_exited"]
[connection signal="pressed" from="Mat_2/Button_2" to="." method="_on_Button_2_pressed"]
